# DefectDetection

./: README.md
DefectDetectionModule_lib_611/: CMakeLists.txt
screw_lib_1/: CMakeLists.txt  test.cpp
screw_lib_1/defect/: .DefectDetectionModule.cpp.swp  DefectDetectionModule.cpp  DefectDetectionModule.h
screw_lib_2/: CMakeLists.txt  DefectDetectionModule.h  README.md
screw_lib_2/base64/: base64.cpp  base64.h
screw_lib_2/defect/: DefectDetectionModule.cpp
screw_test/: CMakeLists.txt  test.cpp
